# Learn_

./: .gitignore  CMakeLists.txt  Config.cmake.in  auto_build.sh
ThirdLibs/OpenCV/install/include/opencv5/opencv2/: cvconfig.h  opencv_modules.hpp
ThirdLibs/OpenCV/install/lib/: libopencv_3d.so.5.0.0  libopencv_bgsegm.so.5.0.0  libopencv_bgsegm.so.500  libopencv_bioinspired.so.5.0.0  libopencv_bioinspired.so.500  libopencv_calib.so.5.0.0  libopencv_ccalib.so.5.0.0  libopencv_ccalib.so.500  libopencv_datasets.so.5.0.0  libopencv_datasets.so.500  libopencv_dnn_objdetect.so.5.0.0  libopencv_dnn_objdetect.so.500  libopencv_dnn_superres.so.5.0.0  libopencv_dnn_superres.so.500  libopencv_dpm.so.5.0.0  libopencv_dpm.so.500  libopencv_face.so.5.0.0  libopencv_face.so.500  libopencv_features2d.so.5.0.0  libopencv_flann.so.5.0.0  libopencv_freetype.so.5.0.0  libopencv_freetype.so.500  libopencv_fuzzy.so.5.0.0  libopencv_fuzzy.so.500  libopencv_hfs.so.5.0.0  libopencv_hfs.so.500  libopencv_highgui.so.5.0.0  libopencv_img_hash.so.5.0.0  libopencv_img_hash.so.500  libopencv_imgcodecs.so.5.0.0  libopencv_intensity_transform.so.5.0.0  libopencv_intensity_transform.so.500  libopencv_line_descriptor.so.5.0.0  libopencv_line_descriptor.so.500  libopencv_mcc.so.5.0.0  libopencv_mcc.so.500  libopencv_ml.so.5.0.0  libopencv_objdetect.so.5.0.0  libopencv_optflow.so.5.0.0  libopencv_optflow.so.500  (+47 more)
ThirdLibs/OpenCV/install/lib/cmake/opencv5/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
ThirdLibs/benchmark/install/lib/cmake/benchmark/: benchmarkConfigVersion.cmake
ThirdLibs/benchmark/install/lib/pkgconfig/: benchmark.pc  benchmark_main.pc
ThirdLibs/ncnn/install/include/ncnn/: platform.h
ThirdLibs/ncnn/install/lib/pkgconfig/: ncnn.pc
ThirdLibs/nlopt/install/lib/cmake/nlopt/: NLoptLibraryDepends-release.cmake  NLoptLibraryDepends.cmake
ThirdLibs/opencv/install/lib/: libopencv_world.so.409
learn_c++_design/: CMakeLists.txt
src/: ReadMe.md  st_base_graph.hpp  st_edge.hpp  st_graph_pipline.hpp  st_graph_pipline_template.hpp  st_test.cpp  st_test.hpp  st_test_demasaic  st_test_demasaic.cpp  st_test_gtest.cpp  st_test_gtest.hpp  st_test_traits.hpp  st_vertex.hpp
toolchains/: aarch64-none-android-gnu.toolchain.cmake
(+16 files in other folders)
